--- a/src/css/header.css
+++ b/src/css/header.css
@@ -4,10 +4,10 @@
     top: 0;
     left: 0;
     width: 100%;
-    color: #808080;
-    padding: 10px;
-    box-shadow: 0px 2px 4px #00000033;
-    background-color:whitesmoke;
+    height:10%;
+box-shadow: 0% 0.1333% 0.2667% rgba(0, 0, 0, 0.2);
+
+    background-color:black;
     z-index:900;
   }
   /* styles.css */
@@ -20,14 +20,14 @@
   right: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5); /* Semi-transparent background to overlay the entire screen */
+  background: rgba(0, 0, 0, 0.5); 
   z-index: 1000; /* Adjust the z-index to control the stacking order */
 }
 
 /* Define the modal-content class to style the modal content */
 .modal-content {
   background: white;
-  padding: 20px;
-  box-shadow: 0 0 50px rgba(0, 0, 0, 0.2);
-  border-radius: 10px;
+  padding: 1.3333%;
+box-shadow: 0% 0% 3.3333% rgba(0, 0, 0, 0.2);
+border-radius: 0.6667%;
 }
