--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,10 +1,11 @@
 /* src/components/Header.css */
+
 .fixed-header {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height:10%;
+    width: 100vw;
+    height:5vw;
 box-shadow: 0% 0.1333% 0.2667% rgba(0, 0, 0, 0.2);
 
     background-color:black;
@@ -15,9 +16,6 @@ box-shadow: 0% 0.1333% 0.2667% rgba(0, 0, 0, 0.2);
 /* Define the modal class to create a modal overlay */
 .modal {
   position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.5); 
