--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,16 +1,73 @@
 /* src/components/Header.css */
-
 .fixed-header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height:5vw;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height:5vw;
 box-shadow: 0% 0.1333% 0.2667% rgba(0, 0, 0, 0.2);
+  background-color:black;
+  z-index:900;
+}
 
-    background-color:black;
-    z-index:900;
+  .header-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 10px;
   }
+.header-content-container {
+  display: flex;
+  color: gold;
+}
+.header-title{
+  text-align: center;
+  color:gold;
+  font-size: 1.5vw;
+  font-family: cursive;
+  margin-right: 10vw;
+}
+
+.header-link {
+  margin-left: 1.25vw;
+  cursor: pointer;
+  font-size: 1.25vw;
+}
+
+
+.whatsapp-container {
+  color: gold;
+  margin-right: 0.75vw;
+  display:flex;
+}
+
+.whatsapp-icon {
+  font-size: 1;
+  cursor: pointer;
+}
+
+.whatsapp-number {
+ font-size: 1vw;
+  cursor: pointer;
+  padding:0.5rem;
+  border-bottom: 2px solid gold;
+}
+
+.register-button {
+  margin-right: 0.75vw;
+  font-size: 1.125vw;
+  border-radius: 0.625vw;
+  padding: 0.625vw 0.625vw;
+  cursor: pointer;
+}
+
+.login-button {
+  margin-right: 1.9vw;
+  font-size: 1.125vw;
+  border-radius: 0.625vw;
+  padding: 0.625vw 0.625vw;
+  cursor: pointer;
+}
   /* styles.css */
 
 /* Define the modal class to create a modal overlay */
@@ -21,11 +78,94 @@ box-shadow: 0% 0.1333% 0.2667% rgba(0, 0, 0, 0.2);
   background: rgba(0, 0, 0, 0.5); 
   z-index: 1000; /* Adjust the z-index to control the stacking order */
 }
-
+.login-modal-header{
+  font-size: 25px; font-weight: bold;
+}
+.login-modal-lebel1{
+   font-size: 1.25vw; margin-top: 1.25vw;
+}
+.login-modal-lebel2{
+  font-size: 1.25vw; margin-top: 1.25vw;
+}
+.login-modal-input{
+font-size: 1.15vw; width:25vw; padding: 10px;
+}
 /* Define the modal-content class to style the modal content */
 .modal-content {
   background: white;
   padding: 1.3333%;
 box-shadow: 0% 0% 3.3333% rgba(0, 0, 0, 0.2);
 border-radius: 0.6667%;
+margin-left: 29vw; margin-right:29vw; margin-top: 1.25vw;
+}
+.title{
+ align-items: center;
+ 
+}
+.button-container{
+  display: flex;
+}
+@media (max-width: 600px) {
+  .header-title {
+    margin-top: 2vw;
+    font-size: 4vw ;
+    margin-left: 2vw;/* Adjust the font size for smaller screens */
+  }
+
+  .header-container {
+    display: block; /* Remove display: flex; to stack items vertically */
+  }
+
+  .whatsapp-number {
+    font-size: 1.5vw; /* Adjust the font size for smaller screens */
+  }
+.fixed-header{
+  height:35vw
+}
+.header-link {
+  font-size: 4vw;
+  margin-left: 3vw;
+}
+.whatsapp-number {
+  font-size: 4vw;
+ }
+ .button-container{
+  justify-content: space-between;
+  margin-top: 3vw;
+}
+.login-button{
+  font-size: large;
+}
+.register-button{
+  font-size: 4vw;
+  margin-right: 15vw;
+}
+.modal {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5); 
+  z-index: 1000; /* Adjust the z-index to control the stacking order */
+}
+.login-modal-header{
+  font-size: 25px; font-weight: bold;
+}
+.login-modal-lebel1{
+   font-size: 4vw; margin-top: 4vw;
+}
+.login-modal-lebel2{
+  font-size: 4vw; margin-top: 4vw;
+}
+.login-modal-input{
+font-size: 3.5vw; width:50vw; padding: 10px;margin-top: 2vw;
+}
+/* Define the modal-content class to style the modal content */
+.modal-content {
+  background: white;
+  padding: 1.3333%;
+box-shadow: 0% 0% 3.3333% rgba(0, 0, 0, 0.2);
+border-radius: 1vw;
+margin-left: 20vw; margin-right:15vw; margin-top: 4vw;
+}
+  /* Add more styles as needed for smaller screens */
 }
