--- a/src/css/header.css
+++ b/src/css/header.css
@@ -105,6 +105,84 @@ margin-left: 29vw; margin-right:29vw; margin-top: 1.25vw;
 .button-container{
   display: flex;
 }
+/* Define a class for the form container */
+.registration-modal-form-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 28.125vw; /* Approximately 450/16 */
+  margin-left: 3.5vw;
+}
+
+/* Define a class for the heading "User Registration" */
+.registration-modal-form-heading {
+  font-size: 1.5625vw; /* Approximately 25/16 */
+  font-weight: bold;
+}
+
+/* Define a class for the columns */
+.registration-modal-form-columns {
+  display: flex;
+  text-align: center;
+}
+
+/* Define a class for the left column */
+.registration-modal-left-column {
+  flex: 1;
+  padding-right: 1vw; /* Approximately 20/16 */
+}
+
+/* Define a class for the right column */
+.registration-modal-right-column {
+  flex: 1;
+  padding-left: 1vw; /* Approximately 20/16 */
+}
+
+/* Define a class for common input fields */
+.registration-modal-form-input {
+  font-size: 1.125vw; /* Approximately 18/16 */
+  width: 15vw; /* Approximately 11/16 */
+  padding: 0.3125vw; /* Approximately 5/16 */
+  margin-top: 0.5vw; /* Approximately 20/16 */
+  margin-left: 1vw; /* Approximately 10/16 */
+  margin-bottom: 0.5vw;
+}
+
+/* Define a class for buttons */
+.registration-modal-form-button {
+  font-size: 1.25vw; /* Approximately 20/16 */
+  cursor: pointer;
+  margin-right: 0.5vw; /* Approximately 10/16 */
+  text-align: center;
+}
+.registration-modal-form-input1 {
+  font-size: 1.125vw; /* Approximately 18/16 */
+  width: 32vw; /* Approximately 11/16 */
+  padding: 0.3125vw; /* Approximately 5/16 */
+  margin-top: 0.75vw; /* Approximately 20/16 */
+  margin-left: 3.5vw; /* Approximately 10/16 */
+  margin-bottom: 1.5vw;
+}
+.registration-modal-form-input2 {
+  font-size: 1.125vw; /* Approximately 18/16 */
+  width: 13vw; /* Approximately 11/16 */
+  padding: 0.3125vw; /* Approximately 5/16 */
+  margin-top: 0.75vw; /* Approximately 20/16 */
+  margin-left: 3.5vw; /* Approximately 10/16 */
+  margin-bottom: 1.5vw;
+}
+
+/* Define a class for labels */
+.registration-modal-form-label {
+  margin-left: 0.03125vw; /* Approximately 0.5/16 */
+}
+
+/* Define a class for the "Address" label */
+.registration-modal-address-label {
+  font-size: 1.25vw;
+  margin-left: 3.43125vw; 
+}
+
 @media (max-width: 600px) {
   .header-title {
     margin-top: 2vw;
@@ -166,6 +244,75 @@ font-size: 3.5vw; width:50vw; padding: 10px;margin-top: 2vw;
 box-shadow: 0% 0% 3.3333% rgba(0, 0, 0, 0.2);
 border-radius: 1vw;
 margin-left: 20vw; margin-right:15vw; margin-top: 4vw;
+}
+.registration-modal-form-container {
+  width: 80.125vw; /* Approximately 450/16 */
+  margin-left: 0vw;
+}
+
+/* Define a class for the heading "User Registration" */
+.registration-modal-form-heading {
+  font-size: 5vw; 
+  margin-right: 15vw;
+}
+
+.registration-modal-left-column {
+  padding-right: 1vw; /* Approximately 20/16 */
+  margin-right: 5vw;
+}
+
+/* Define a class for the right column */
+.registration-modal-right-column {
+  flex: 1;
+  padding-left: 1vw; /* Approximately 20/16 */
+  margin-right: 20vw;
+}
+
+/* Define a class for common input fields */
+.registration-modal-form-input {
+  font-size: 3.5vw; /* Approximately 18/16 */
+  width: 24vw; /* Approximately 11/16 */
+  padding: 0.3125vw; /* Approximately 5/16 */
+  margin-top: 2vw; /* Approximately 20/16 */
+  margin-left: 0vw; /* Approximately 10/16 */
+  margin-bottom: 0vw;
+}
+
+/* Define a class for buttons */
+.registration-modal-form-button {
+  font-size: 3.5vw; /* Approximately 20/16 */
+  margin-right: 15vw;
+  margin-top: 1.5vw;
+}
+.registration-modal-form-input1 {
+  font-size: 3.3vw; /* Approximately 18/16 */
+  width: 45vw; /* Approximately 11/16 */
+  padding: 0.3125vw; /* Approximately 5/16 */
+  margin-top: 1.5vw; /* Approximately 20/16 */
+  margin-right: 25vw; /* Approximately 10/16 */
+  margin-bottom: 1.5vw;
+}
+.registration-modal-form-input2 {
+  font-size: 3vw; /* Approximately 18/16 */
+  width: 20vw; /* Approximately 11/16 */
+  padding: 1vw; /* Approximately 5/16 */
+  margin-top: 2vw; /* Approximately 20/16 */
+  margin-left: 3.5vw; /* Approximately 10/16 */
+  margin-bottom: 1.5vw;
+}
+
+/* Define a class for labels */
+.registration-modal-form-label {
+  margin-left:1vw; /* Approximately 0.5/16 */
+  margin-top: 1.75vw;
+  font-size: 2vw;
+}
+
+/* Define a class for the "Address" label */
+.registration-modal-address-label {
+  font-size: 2vw;
+  margin-right: 23vw; 
+  margin-top: 1vw;
 }
   /* Add more styles as needed for smaller screens */
 }
