--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -142,7 +142,7 @@
     font-size: 4.25vw;
     margin-bottom: 3vw;
     margin-top: 7vw;
-    margin-left: 16vw;
+    margin-left: 13vw;
   }
   .nav-link {
     margin-left: 18vw;
@@ -150,7 +150,7 @@
     margin-bottom: 2.5vw;
   }
   .nav-link-section {
-    margin-left: 16vw;
+    margin-left: 13vw;
     font-size: 3vw;
     margin-bottom: 2.5vw;
   }
@@ -163,6 +163,7 @@
     margin-bottom: 3vw;
     margin-top: 7vw;
     margin-left: 17vw;
+    font-weight: bold;
   }
   .social-media-button1 {
     margin-left: 17vw;
